--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -1,9 +1,11 @@
-.my{
-    width:77vh;
+body{
+    background-color: #080808;
 }
-.top{
+.top-box {
     display: flex;
     background-color: aqua;
-    padding: 50px;
-    margin: 50px;
-}
+    width: 100%;
+    height: 20vh;
+      }
+      
+  
