--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -1,11 +1,65 @@
 body{
-    background-color: #080808;
+    background-color: #171716;
+    margin:1%;;
 }
+
 .top-box {
     display: flex;
-    background-color: aqua;
+    flex-grow: 1;
+    background-color: #a7a69e;
     width: 100%;
-    height: 20vh;
-      }
-      
+    height: 10vh;
+    border-radius: 10px ;
+}
+
+ .mid{
+        display: flex;
+        flex-grow: 1;
+        /* border: aqua solid 2px; */
+ }
+.qoute-box{
+    display: flex;
+    justify-content: center;
+    background-color: #a7a69e;
+    width:38%;
+    height: 55vh;
+    border-radius: 10px;
+    margin-top: 1%;
+}
+
+.potrait{
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    background-color: #a7a69e;
+    width:27%;
+    height: 55vh;
+    border-radius: 10px;
+    margin-top: 1%;
+    margin-left: 1%;
+}
+
+.cert{
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    background-color: #a7a69e;
+    width:32%;
+    height: 70vh;
+    border-radius: 10px;
+    margin-top: 1%;
+    margin-left: 1%;
+}
+
+.abt-me{
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    background-color: #a7a69e;
+    width:32%;
+    height: 70vh;
+    border-radius: 10px;
+    margin-top: 1%;
+    margin-left: 1%;
+}
   
