--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -59,7 +59,6 @@ body{
     width:32%;
     height: 70vh;
     border-radius: 10px;
-    margin-top: 1%;
-    margin-left: 1%;
+    margin-top: -14.1vh;
 }
   
