--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -9,9 +9,7 @@ body{
     width: 100%;
     height: 10vh;
     border-radius: 10px ;
-    border: aqua solid 1px;
 }
-
  .mid{
         display: grid;
         grid-template-columns: repeat(10,1fr);
@@ -43,22 +41,17 @@ body{
     grid-column-start: 8;
     grid-column-end: 11;
 }
-
-
-
 .afeef {
     display: flex;
     border-radius: 10px;
-    width: 5%;
+    width: 12vw;
     height: 9.7vh;
     justify-content: center;
     align-items: center;
-    font-family: "Playwrite DK Loopet",cursive;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    margin-left: 10px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    border: aqua solid 2px;
 }
-.ahmed {
+/* .ahmed {
     display: flex;
     border-radius: 10px;
     height: 9.7vh;
@@ -68,7 +61,7 @@ body{
     font-optical-sizing: auto;
     font-weight: 300;
     font-size:21px ;
-}
+} */
 .abt-me{
     background-color: #a7a69e;
     border-radius: 10px;
