--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -1,6 +1,6 @@
 body{
     background-color: #171716;
-    margin:1%;;
+    margin:1%;
 }
 
 .top-box {
@@ -13,9 +13,10 @@ body{
  .mid{
         display: grid;
         grid-template-columns: repeat(10,1fr);
-        grid-template-rows: repeat(10,100px);
+        grid-template-rows: repeat(6,100px);
         margin-top: 1%;
-        gap: 1% 1%;
+        column-gap: 1%;
+        row-gap: 1.8%;
  }
 .qoute-box{
     background-color: #a7a69e;
@@ -41,35 +42,6 @@ body{
     grid-column-start: 8;
     grid-column-end: 11;
 }
-.afeef {
-    display: flex;
-    border-radius: 10px;
-    width: 12vw;
-    height: 9.7vh;
-    justify-content: center;
-    align-items: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-    border: aqua solid 2px;
-}
-/* .ahmed {
-    display: flex;
-    border-radius: 10px;
-    height: 9.7vh;
-    justify-content: center;
-    align-items: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-size:21px ;
-} */
-.abt-me{
-    background-color: #a7a69e;
-    border-radius: 10px;
-    grid-row-start:5 ;
-    grid-row-end: 7;
-    grid-column-start: 1;
-    grid-column-end: 4;
-}
 .self{
     background-color: #a7a69e;
     border-radius: 10px;
@@ -85,4 +57,52 @@ body{
     grid-row-end: 7;
     grid-column-start:8 ;
     grid-column-end:11 ;
+}
+.afeef {
+    display: flex;
+    border-radius: 10px;
+    margin-left: 2%;
+    width: auto;
+    height: 9.7vh;
+    justify-content: center;
+    align-items: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+}
+.three{
+    display: grid;
+    width: auto;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 9%;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: 2%;
+}
+.projects{
+    display: flex;
+    width: auto;
+    align-self: center;
+    justify-content: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.about{
+    display: flex;
+    width: auto;
+    align-self: center;
+    justify-content: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.cnt{
+    display: flex;
+    width: auto;
+    align-self: center;
+    justify-content: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.abt-me{
+    background-color: #a7a69e;
+    border-radius: 10px;
+    grid-row-start:5 ;
+    grid-row-end: 7;
+    grid-column-start: 1;
+    grid-column-end: 4;
 }
