--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -12,6 +12,7 @@ body{
 }
  .mid{
         display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
         grid-template-columns: repeat(10,1fr);
         grid-template-rows: repeat(6,100px);
         margin-top: 1%;
@@ -19,20 +20,46 @@ body{
         row-gap: 1.8%;
  }
 .qoute-box{
+    display: flex;
     background-color: #a7a69e;
     border-radius: 10px;
     grid-row-start: 1;
     grid-row-end: 5;
     grid-column-start: 1 ;
     grid-column-end: 5;
+    flex-direction: column;
 }
 .flwr-pht{
-    display: flex;
+    display: flex; 
     justify-content: end;
     margin-top: 3%;
     margin-right: 3%;
+    margin-left: auto;
     width: auto;
     height:auto;
+    /* border-radius: 40px; */
+    background-color: aliceblue;
+}
+.flwr-pht:hover{
+    cursor:pointer;
+    animation:rotate 0.8s linear 0s infinite;
+    color: white;
+  }
+  @keyframes rotate {
+    from{
+      transform: rotate(0deg);
+    }
+    to{
+      transform: rotate(360deg);
+    }
+  }
+.txt1 {
+    display: flex;
+    justify-content: left;
+    margin-left: 1vw;
+    font-size:3rem;
+    width: auto;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
 }
 .potrait{
     background-color: #a7a69e;
