--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -1,6 +1,7 @@
 body{
     background-color: #171716;
     margin:1%;
+     
 }
 
 .top-box {
@@ -9,6 +10,7 @@ body{
     width: 100%;
     height: 10vh;
     border-radius: 10px ;
+
 }
  .mid{
         display: grid;
@@ -39,7 +41,7 @@ body{
     height:auto;
     /* border-radius: 40px; */
 }
-/* .flwr-pht{
+.flwr-pht{
     cursor:pointer;
     animation:rotate 8s linear 0s infinite;
   }
@@ -50,7 +52,7 @@ body{
     to{
       transform: rotate(360deg);
     }
-  } */
+  }
 .txt1 {
     display: flex;
     justify-content: left;
@@ -77,14 +79,25 @@ body{
 }
 .topc{
     display: flex;
-    border: aqua solid 1px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
     border-radius: 10px;
     width: auto;
     height:auto;
+    font-size: 1.7rem;
+    margin-top: 2%;
+    margin-left: 2.6%;
+
 }
 .imgc{
-    border: aqua solid 2px;
-    height: 100px;
+    margin-top: 2.5%;
+    
+}
+#imagecertificate{
+   width: 95%;
+    /* justify-content: center; */
+   height: auto ;
+   margin-left: 2.5%;
+  border-radius: 20px;
 }
 .self{
     background-color: #a7a69e;
