--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -12,14 +12,13 @@ body{
     border-radius: 10px ;
 
 }
- .mid{
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
-        grid-template-columns: repeat(10,1fr);
-        grid-template-rows: repeat(6,100px);
-        margin-top: 1%;
-        column-gap: 1%;
-        row-gap: 1.8%;
+.mid{
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+    grid-template-rows: repeat(6,100px);
+    margin-top: 1%;
+    column-gap: 1%;
+    row-gap: 1.8%;
  }
 .qoute-box{
     display: flex;
@@ -56,6 +55,7 @@ body{
 .txt1 {
     display: flex;
     justify-content: left;
+    margin-top: 3%;
     margin-left: 1vw;
     font-size:3rem;
     width: auto;
@@ -84,9 +84,19 @@ body{
     width: auto;
     height:auto;
     font-size: 1.7rem;
-    margin-top: 2%;
-    margin-left: 2.6%;
+    margin-top: 4%;
+    margin-left: 4%;
 
+}
+#arrw{
+    display: flex; 
+    border-radius: 10px;
+    width: auto;
+    height:auto;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    margin-right: 5%;
+    margin-left: auto;
 }
 .imgc{
     margin-top: 2.5%;
@@ -96,8 +106,61 @@ body{
    width: 95%;
     /* justify-content: center; */
    height: auto ;
+   margin-top: 5%;
    margin-left: 2.5%;
   border-radius: 20px;
+}
+.allc{
+    margin-top: 3vh;
+}
+.g1{
+    display: flex;
+    border: 2px solid rgb(39, 39, 39);
+    margin-bottom: 4.5%;
+    margin-left: 1.3vw;
+    width:26vw;
+}
+.google{
+    display: flex;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    width: auto;
+    height:auto;
+    font-size: 1.7rem;
+    margin-left: 3%;
+}
+.g2{
+    display: flex;
+    border: 2px solid rgb(39, 39, 39);
+    margin-left: 1.3vw;
+    width:26vw;
+    margin-top: 4.5%;
+    margin-bottom: 4.5%;
+}
+.hackr{
+    display: flex;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    width: auto;
+    height:auto;
+    font-size: 1.7rem;
+    /* margin-top:10%; */
+    margin-left: 3%;
+
+}
+.g3{
+    display: flex;
+    border: 2px solid rgb(39, 39, 39);
+    margin-left: 1.3vw;
+    width:26vw;
+    margin-top: 4.5%;
+    margin-bottom: 4.5%; 
+}
+.more{
+    display: flex;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    width: auto;
+    height:auto;
+    font-size: 1.7rem;
+    margin-left: 3%;
 }
 .self{
     background-color: #a7a69e;
@@ -106,6 +169,37 @@ body{
     grid-row-end: 7;
     grid-column-start: 4;
     grid-column-end: 8;
+}
+.txt2{
+    display: flex;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    border-radius: 10px;
+    width: auto;
+    height:auto;
+    font-size: 1.2rem;
+    margin-top: 3.7%;
+    margin-left: 3.5%;
+}
+#str{
+    display: flex; 
+    border-radius: 10px;
+    width: auto;
+    height:auto;
+    font-size: 2rem;
+    margin-top: -1.2%;
+    margin-bottom: 0%;
+    margin-right: 3.4%;
+    margin-left: auto;
+}
+.cnt-me{
+    display: flex;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    margin-top: 13%;
+    margin-left: 5%;
+    border-radius: 10px;
+    width: auto;
+    height:auto;
+    font-size: 4rem;
 }
 .contact{
     background-color: #a7a69e;
@@ -124,6 +218,7 @@ body{
     justify-content: center;
     align-items: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-size: 1.2rem;
 }
 .three{
     display: grid;
