--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -41,7 +41,6 @@ body{
     /* border-radius: 40px; */
 }
 .flwr-pht{
-    cursor:pointer;
     animation:rotate 8s linear 0s infinite;
   }
   @keyframes rotate {
@@ -83,10 +82,11 @@ body{
     border-radius: 10px;
     width: auto;
     height:auto;
+    color: inherit;
+    text-decoration: none;
     font-size: 1.7rem;
     margin-top: 4%;
     margin-left: 4%;
-
 }
 #arrw{
     display: flex; 
@@ -97,6 +97,9 @@ body{
     margin-bottom: 0%;
     margin-right: 5%;
     margin-left: auto;
+}
+#arrw:hover{
+    cursor: pointer;
 }
 .imgc{
     margin-top: 2.5%;
@@ -128,6 +131,9 @@ body{
     font-size: 1.7rem;
     margin-left: 3%;
 }
+.google:hover{
+    cursor: pointer;
+}
 .g2{
     display: flex;
     border: 2px solid rgb(39, 39, 39);
@@ -144,7 +150,9 @@ body{
     font-size: 1.7rem;
     /* margin-top:10%; */
     margin-left: 3%;
-
+}
+.hackr:hover{
+    cursor: pointer;
 }
 .g3{
     display: flex;
@@ -161,6 +169,9 @@ body{
     height:auto;
     font-size: 1.7rem;
     margin-left: 3%;
+}
+.more:hover{
+    cursor: pointer;
 }
 .self{
     background-color: #a7a69e;
@@ -191,6 +202,9 @@ body{
     margin-right: 3.4%;
     margin-left: auto;
 }
+#str:hover{
+    cursor: pointer;
+}
 .cnt-me{
     display: flex;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -202,12 +216,52 @@ body{
     font-size: 4rem;
 }
 .contact{
+
+    display: flex;
     background-color: #a7a69e;
     border-radius: 10px;
     grid-row-start:6;
     grid-row-end: 7;
     grid-column-start:8 ;
     grid-column-end:11 ;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+.int{
+    display: flex;
+    align-items: center;
+   
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-size: 1.1rem;    
+}
+.int:hover{
+    cursor: pointer;
+}
+.git{
+    display: flex;
+    align-items: center;
+    height: 95%;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-size: 1.1rem;
+}
+.git:hover{
+    cursor: pointer;
+}
+.lin{
+    display: flex;
+    align-items: center;
+    height: 95%;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-size: 1.1rem;  
+}
+#int-logo{
+    display: flex;
+    width:50px;
+    border: aqua solid 2px;
+}
+.lin:hover{
+    cursor: pointer;
 }
 .afeef {
     display: flex;
@@ -236,6 +290,9 @@ body{
     justify-content: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.projects:hover{
+    cursor: pointer;
+}
 .about{
     display: flex;
     width: auto;
@@ -243,12 +300,18 @@ body{
     justify-content: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.about:hover{
+    cursor: pointer;
+}
 .cnt{
     display: flex;
     width: auto;
     align-self: center;
     justify-content: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.cnt:hover{
+    cursor: pointer;
 }
 .abt-me{
     background-color: #a7a69e;
