--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -224,6 +224,7 @@ body{
     grid-row-end: 7;
     grid-column-start:8 ;
     grid-column-end:11 ;
+    justify-content: center;
     justify-content: space-evenly;
     align-items: center;
     
@@ -231,9 +232,13 @@ body{
 .int{
     display: flex;
     align-items: center;
-   
+    justify-content: center;
+    height: auto;
+    width: auto;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-    font-size: 1.1rem;    
+    font-size: 1.1rem;  
+    color: inherit;
+    text-decoration: none;
 }
 .int:hover{
     cursor: pointer;
@@ -241,26 +246,35 @@ body{
 .git{
     display: flex;
     align-items: center;
-    height: 95%;
+    justify-content: center;
+    height: auto;
+    width: auto;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
     font-size: 1.1rem;
+    color: inherit;
+    text-decoration: none;
 }
 .git:hover{
     cursor: pointer;
 }
-.lin{
+.lind{
     display: flex;
     align-items: center;
-    height: 95%;
+    justify-content: center;
+    height: auto;
+    width:  auto;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
     font-size: 1.1rem;  
+    margin-right: -12%;
+    color: inherit;
+    text-decoration: none;
 }
 #int-logo{
     display: flex;
     width:50px;
     border: aqua solid 2px;
 }
-.lin:hover{
+.lind:hover{
     cursor: pointer;
 }
 .afeef {
