--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -1,5 +1,4 @@
 body {
-
     overflow: hidden;
     background: black;
     cursor: auto; /* Hide default cursor */
@@ -254,21 +253,26 @@ body {
     height:auto;
     font-size: 4rem;
 }
-.contact{
-
-    display: flex;
+.contact {
+    display: grid;
     background-color: #a7a69e;
     border-radius: 10px;
-    grid-row-start:6;
+    grid-row-start: 6;
     grid-row-end: 7;
-    grid-column-start:8 ;
-    grid-column-end:11 ;
+    grid-column-start: 8;
+    grid-column-end: 11;
+    grid-template-columns: repeat(3, 1fr); /* Add this line */
+    gap: 1%; /* Add this line */
     justify-content: center;
-    justify-content: space-evenly;
     align-items: center;
-    
+
 }
+
 .int{
+    
+    margin-top: auto;
+    margin-right:auto;
+    margin-left: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -283,6 +287,9 @@ body {
     cursor: pointer;
 }
 .git{
+    margin-top: auto;
+    margin-right:auto;
+    margin-left: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -297,14 +304,16 @@ body {
     cursor: pointer;
 }
 .lind{
+    margin-top: auto;
+    margin-right:auto;
+    margin-left: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     height: auto;
-    width:  auto;
+    width: auto;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-    font-size: 1.1rem;  
-    margin-right: -12%;
+    font-size: 1.1rem;
     color: inherit;
     text-decoration: none;
 }
