--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -117,6 +117,7 @@ main{
     margin-left: auto;
     width: 120px;
     height:auto;
+    border-radius: 20px;
 }
 .flwr-pht{
     animation:rotate 8s linear 0s infinite;
@@ -128,6 +129,12 @@ main{
     to{
       transform: rotate(360deg);
     }
+  }
+  .flwr-pht {
+    user-select: none; /* add this rule */
+    -webkit-user-select: none; /* add this rule for Safari and Chrome */
+    -moz-user-select: none; /* add this rule for Firefox */
+    -ms-user-select: none; /* add this rule for IE and Edge */
   }
   .txt1 {
     display: flex;
@@ -192,13 +199,21 @@ main{
     border-radius: 20px;
    
  }
- #pot{ 
+ #head-space{ 
     width: 100%; 
     height: 100%; 
     object-fit: cover; 
     border-radius: 10px;
         object-position: 0% 13%;
 }
+#head-space {
+    transition: transform 0.2s; /* add a smooth transition effect */
+    transform-style: preserve-3d; /* enable 3D transformations */
+  }
+  
+  #head-space:hover {
+    transform: translateZ(200px); /* move the image 20px forward on hover */
+  }
  .allc{
     position:relative;
     margin-top: 30px;
@@ -535,7 +550,14 @@ footer{
     }
     .about:hover{
         cursor: pointer;}
-    
+        #head-space {
+            transition: 0; /* add a smooth transition effect */
+            transform-style: preserve-3d; /* enable 3D transformations */
+          }
+          
+          #head-space:hover {
+            transform: translateZ(0px); /* move the image 20px forward on hover */
+          }
     .cnt{
         display: flex;
         width: auto;
@@ -559,6 +581,7 @@ footer{
         margin-left: auto;
         color: black;
         text-decoration: none;
+        font-size: 70px;
     }
     #arrw:hover{
         cursor: pointer;
