--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -89,9 +89,11 @@ body{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
     text-decoration:none;
+    
 }
 .about:hover{
-    cursor: pointer;}
+    cursor: pointer;
+}
 
 .cnt{
     display: flex;
@@ -102,6 +104,7 @@ body{
 }
 .cnt:hover{
     cursor: pointer;
+    
 }
 main{
     background: #a7a69e;
@@ -291,7 +294,7 @@ main{
     grid-area:content3 ;
     border-radius: 10px;
     display: flexbox;
-    background-color: #a7a69e;
+    background-color: #eceded;
     border-radius: 10px;
 }
 .explain{
@@ -433,15 +436,14 @@ footer{
     opacity: 0;
     }
     #video-certificate {
-        width: 100%; /* make the video width equal to its parent container */
-        height: 100%; /* make the video height equal to its parent container */
-        object-fit: cover; /* scale the video to fit inside the container */
-        border-radius: 10px; /* add a border radius to match the box */
-        margin: 0; /* remove the margin */
-        padding: 0; /* remove the padding */
-        /* Add these new styles */
-        object-position:top; /* position the video at the top of the container */
-        overflow: hidden; /* hide any overflow to prevent the video from being cut off */
+        width: 100%;
+        height: 100%; 
+        object-fit: cover; 
+        border-radius: 10px; 
+        margin: 0; 
+        padding: 0; 
+        object-position:top; 
+        overflow: hidden; 
       }
 
 @media only screen and (max-width:1080px) {
@@ -534,13 +536,16 @@ footer{
         display: flex;
         width: auto;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        text-decoration: inherit;
+        text-decoration:none;
         font-size:1.3rem;
     }
     .projects:hover{
         cursor: pointer;
     }
     .about{
-        display: flex;
+        display: flex;  
+        text-decoration: inherit;
         width: auto;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         color: black;
