--- a/contactpage(css).css
+++ b/contactpage(css).css
@@ -303,6 +303,7 @@ cursor: pointer;
         align-items: center;
         text-decoration:underline 3.5px ;
         font-size: 4rem;
+        font-family:cursive;
     }
 
 
