--- a/contactpage(css).css
+++ b/contactpage(css).css
@@ -260,7 +260,7 @@ cursor: pointer;
         height: 100vh;
         grid-gap: 11px;
         grid-template-columns:1fr;
-        grid-template-rows: 0.01fr 0.7fr 0.5fr 0.2fr;
+        grid-template-rows: 0.01fr 0.7fr 0.5fr 0.15;
         grid-template-areas: 
         " navt "
         "main" 
