--- a/certificates(css).css
+++ b/certificates(css).css
@@ -60,6 +60,7 @@ body{
 #prev:hover,
 #next:hover{
     opacity: 1;
+    cursor: pointer;
 }
 body {
     overflow: hidden;
@@ -122,7 +123,8 @@ body {
     }
     #prev:hover,
     #next:hover{
-        opacity: 1;
+        opacity: 1; 
+        cursor: pointer;
     }
     
     
