--- a/contactpage(css).css
+++ b/contactpage(css).css
@@ -27,31 +27,78 @@ body{
    width: auto;
    height: 70px;
 }
-.prev{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.prev-btn {
-    padding: 7px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-radius: 10px;
-    height: 50px;
-    cursor: pointer;
-    font-size: 1.9rem;
-    color:black;
+.three > * {
+    position: relative;
+    transition: all 0.3s ease;
   }
   
-  .prev-btn:hover {
-    color: rgb(255, 255, 255);
+  .three > *:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 1.8px;
+    background-color: #000;
+    transition: all 0.3s ease;
   }
+  
+.three > *:hover:after {
+    width: 100%;
+    left: 0;
+    transform: translateX(0);
+    transition: all 0.5s ease;
+  }
+  
+  .three > *:hover:after {
+    animation: underline 0.4s forwards;
+  }
+  
+  @keyframes underline {
+    0% {
+      width: 0%;
+      left: 0;
+      transform: translateX(0);
+    }
+    50% {
+      width: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    100% {
+      width: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
+@keyframes underline-reverse {
+    0% {
+      width: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    50% {
+      width: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    100% {
+      width: 0%;
+      left: 0;
+      transform: translateX(0);
+    }
+}
+
+.three > *:not(:hover):after {
+    animation: underline-reverse 1s forwards;
+}
+
 .afeef {
     display: flex;
     border-radius: 10px;
-    margin-right: auto;
+    margin-left: 2%;
     width: auto;
     height: auto;
     justify-content: center;
@@ -120,7 +167,7 @@ width: auto;
 align-self: center;
 justify-content: center;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-text-decoration: line-through;
+
 }
 .cnt:hover{
 cursor: pointer;
