--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -366,8 +366,22 @@ main{
     border-radius: 10px;
 }
 .explain{
-    width: 300px;
-}
+    display: flex;
+    border-radius: 10px;
+    text-align: center;
+    margin-top: -40px;
+    width: auto;
+    height: auto;
+    font-size: 1.4rem;
+    padding: 2px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    transform: translateY(3px);
+    transition: transform 0.5s;
+  }
+  
+  .explain:hover {
+    transform: translateY(0);
+  }
 .tops{
     display: flex;
    
@@ -375,9 +389,9 @@ main{
 #star{
    margin-top: 0%;
    border-radius: 10px;
-   width: 2.2rem;
+   width: auto;
    height: auto;
-   font-size: 2.9rem;
+   font-size: 3.1rem;
    margin-left: 2.5%;
    margin-top: 0%; 
  
@@ -516,6 +530,7 @@ footer{
         object-position:top; 
         overflow: hidden; 
       }
+     
 
 @media only screen and (max-width:1080px) {
     body{
@@ -551,6 +566,7 @@ footer{
         color: black;
         text-decoration: none;
     }
+
     .navt{
         background: #a7a69e;
         grid-area:navt;
@@ -758,7 +774,6 @@ footer{
         height:auto;
         font-size: 2rem;
         margin-top: -1.2%;
-        margin-bottom: 0%;
         margin-right: 3.4%;
         margin-left: auto;
     }
@@ -812,4 +827,28 @@ footer{
     .lind:hover{
         cursor: pointer;
     }
-} 
+
+.tops{
+    width: auto;
+    height: auto;
+}
+.explain{
+    font-size: 3rem;
+    margin-bottom: 15px;
+}
+.explain{
+    display: flex;
+    padding: 2px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    transform: translateY(0px);
+    transition: transform 0.5s;
+  }
+  
+  .explain:hover {
+    transform: translateY(0);
+  }
+  #star{
+    zoom:2;
+    margin-bottom: 20px;
+  }
+}
